manifests/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: blobber
spec:
  ports:
    - port: 9000
  selector:
    app: minio
